--- a/README
+++ b/README
@@ -1,4 +1,64 @@
-RECIPES
-["apps4", "controllers", "core", "deployment", "email", "extras", "frontend", "gems", "git", "init", "models", "prelaunch", "railsapps", "readme", "routes", "saas", "setup", "testing", "views"]
-PREFERENCES
-{:git=>true, :apps4=>"rails-devise-pundit", :unit_test=>false, :integration=>false, :fixtures=>false, :authentication=>"devise", :authorization=>"pundit", :starter_app=>"admin_app", :quiet_assets=>true, :local_env_file=>false, :better_errors=>true, :pry=>false, :deployment=>"none", :dev_webserver=>"webrick", :prod_webserver=>"passenger", :database=>"mysql", :templates=>"erb", :continuous_testing=>"none", :frontend=>"bootstrap3", :email=>"gmail", :devise_modules=>"default", :form_builder=>"simple_form"}
+Salve
+========================
+
+This application was generated with the rails_apps_composer gem:
+https://github.com/RailsApps/rails_apps_composer
+provided by the RailsApps Project:
+http://railsapps.github.io/
+
+________________________
+
+Recipes:
+
+* apps4
+* controllers
+* core
+* deployment
+* email
+* extras
+* frontend
+* gems
+* git
+* init
+* models
+* prelaunch
+* railsapps
+* readme
+* routes
+* saas
+* setup
+* testing
+* views
+
+Preferences:
+
+* git: true
+* apps4: rails-devise-pundit
+* unit_test: false
+* integration: false
+* fixtures: false
+* authentication: devise
+* authorization: pundit
+* starter_app: admin_app
+* quiet_assets: true
+* local_env_file: false
+* better_errors: true
+* pry: false
+* deployment: none
+* dev_webserver: webrick
+* prod_webserver: passenger
+* database: mysql
+* templates: erb
+* continuous_testing: none
+* frontend: bootstrap3
+* email: gmail
+* devise_modules: default
+* form_builder: simple_form
+* rvmrc: true
+* ban_spiders: true
+* jsruntime: true
+* github: true
+
+________________________
+
+License
